FIX: Table overflow issue; UPDATE: content;

--- a/app/globals.css
+++ b/app/globals.css
@@ -35,4 +35,5 @@ body {
 
 .md-table-wraper {
   overflow-x: auto;
+  max-width: 90dvw;
 }
